--- a/index.html
+++ b/index.html
@@ -1,19 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title of the Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Task Planner</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-image: url('pool.jpg');
+            /* Path to your background image */
+            background-size: cover;
+            /* Cover the entire page */
+            background-repeat: no-repeat;
+            /* Do not repeat the image */
+            background-attachment: fixed;
+            /* Fixed background, scroll content */
+        }
+
+        .task-card {
+            margin-bottom: 10px;
+        }
+
+        .container {
+            background-color: rgba(255, 255, 255, 0.9);
+            /* White background with transparency */
+            padding: 20px;
+            border-radius: 8px;
+        }
+
+        .btn-custom-submit {
+            background-color: #4CAF50;
+            /* Green */
+            color: white;
+        }
+
+        .btn-custom-edit {
+            background-color: #FFD700;
+            /* Gold */
+            color: black;
+        }
+
+        .btn-custom-delete {
+            background-color: #f44336;
+            /* Red */
+            color: white;
+        }
+
+        /* Hover colors based on task status */
+        .task-card.to-do:hover {
+            border-color: #00f;
+            /* Blue border */
+        }
+
+        .task-card.in-progress:hover {
+            border-color: #ffa500;
+            /* Orange border */
+        }
+
+        .task-card.completed:hover {
+            border-color: #0f0;
+            /* Green border */
+        }
+    </style>
 </head>
+
 <body>
+    <div class="container mt-5">
+        <h1 class="mb-4">Task Planner</h1>
+        <form id="taskForm">
+            <div class="form-group">
+                <label for="taskName">Name</label>
+                <input type="text" class="form-control" id="taskName" placeholder="Enter task name" required>
+            </div>
+            <div class="form-group">
+                <label for="taskDescription">Description</label>
+                <textarea class="form-control" id="taskDescription" rows="3" placeholder="Enter task description"
+                    required></textarea>
+            </div>
+            <div class="form-group">
+                <label for="assignedTo">Assigned To</label>
+                <input type="text" class="form-control" id="assignedTo" placeholder="Enter assignee name" required>
+            </div>
+            <div class="form-group">
+                <label for="dueDate">Due Date</label>
+                <input type="date" class="form-control" id="dueDate" required>
+            </div>
+            <div class="form-group">
+                <label for="status">Status</label>
+                <select class="form-control" id="status" required>
+                    <option value="To Do">To Do</option>
+                    <option value="In Progress">In Progress</option>
+                    <option value="Completed">Completed</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="taskImage">Upload Image</label>
+                <input type="file" class="form-control" id="taskImage" accept="image/*">
+            </div>
+            <button type="submit" class="btn btn-custom-submit">Submit</button>
+        </form>
 
+        <h2 class="mt-5">Task List</h2>
+        <div id="taskList" class="row">
+            <!-- Task items will be inserted here -->
+        </div>
+    </div>
 
-
-
-<!-- Your content goes here -->
-<script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
