--- a/index.html
+++ b/index.html
@@ -8,12 +8,97 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container mt-5">
+        <h1 class="mb-4">Task Planner</h1>
 
+        <!-- List Group -->
+        <ul class="list-group">
+            <!-- Task 1 -->
+            <li class="list-group-item">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Task 1</h5>
+                    <small>2024-05-28</small>
+                </div>
+                <p class="mb-1">This is the description for Task 1.</p>
+                <small>John Doe</small>
+                <span class="badge bg-primary">To Do</span>
+            </li>
+            <!-- Task 2 -->
+            <li class="list-group-item">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Task 2</h5>
+                    <small>2024-05-29</small>
+                </div>
+                <p class="mb-1">This is the description for Task 2.</p>
+                <small>Jane Smith</small>
+                <span class="badge bg-primary">In Progress</span>
+            </li>
+            <!-- Task 3 -->
+            <li class="list-group-item">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Task 3</h5>
+                    <small>2024-05-30</small>
+                </div>
+                <p class="mb-1">This is the description for Task 3.</p>
+                <small>Michael Johnson</small>
+                <span class="badge bg-primary">To Do</span>
+            </li>
+            <!-- Task 4 -->
+            <li class="list-group-item">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Task 4</h5>
+                    <small>2024-06-01</small>
+                </div>
+                <p class="mb-1">This is the description for Task 4.</p>
+                <small>Emily Brown</small>
+                <span class="badge bg-primary">In Progress</span>
+            </li>
+            <!-- Task 5 -->
+            <li class="list-group-item">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Task 5</h5>
+                    <small>2024-06-02</small>
+                </div>
+                <p class="mb-1">This is the description for Task 5.</p>
+                <small>Chris Wilson</small>
+                <span class="badge bg-primary">Completed</span>
+            </li>
+            <!-- End of Task Cards -->
+        </ul>
+        <!-- End of List Group -->
 
-
-
-<!-- Your content goes here -->
-<script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <!-- Task Form -->
+        <form>
+            <div class="form-group">
+                <label for="taskName">Name</label>
+                <input type="text" class="form-control" id="taskName" placeholder="Enter task name" required>
+            </div>
+            <div class="form-group">
+                <label for="taskDescription">Description</label>
+                <textarea class="form-control" id="taskDescription" rows="3" placeholder="Enter task description" required></textarea>
+            </div>
+            <div class="form-group">
+                <label for="assignedTo">Assigned To</label>
+                <input type="text" class="form-control" id="assignedTo" placeholder="Enter assignee name" required>
+            </div>
+            <div class="form-group">
+                <label for="dueDate">Due Date</label>
+                <input type="date" class="form-control" id="dueDate" required>
+            </div>
+            <div class="form-group">
+                <label for="status">Status</label>
+                <select class="form-control" id="status" required>
+                    <option value="To Do">To Do</option>
+                    <option value="In Progress">In Progress</option>
+                    <option value="Completed">Completed</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <!-- End of Task Form -->
+    </div>
+    
+    <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
