--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       </div>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="script.js"></script>
+      <script src="js/taskManager.js"></script>
+      <script type="module" src="js/index.js"></script>
     </body>
 </html>
