--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     
     <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      <script src="js/taskManager.js"></script>
+      <script type="module" src="js/index.js"></script>
     <script>
         document.getElementById('taskForm').addEventListener('submit', function(event) {
             event.preventDefault();
