included local storage

--- a/index.html
+++ b/index.html
@@ -103,7 +103,18 @@
         </form>
 
         <h2 class="mt-5">Task List</h2>
-        <div id="taskList" class="row">
+        <div class="status-section">
+            <div class="status-header">To Do</div>
+            <div id="toDoList" class="row"></div>
+        </div>
+        <div class="status-section">
+            <div class="status-header">In Progress</div>
+            <div id="inProgressList" class="row"></div>
+        </div>
+        <div class="status-section">
+            <div class="status-header">Completed</div>
+            <div id="completedList" class="row"></div>
+        </div>
             <!-- Task items will be inserted here -->
         </div>
     </div>
