--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         .task-card {
             margin-bottom: 10px;
+
         }
 
         .container {
@@ -67,55 +68,99 @@
 </head>
 
 <body>
-    <div class="container mt-5">
-        <h1 class="mb-4">Task Planner</h1>
-        <form id="taskForm">
-            <div class="form-group">
-                <label for="taskName">Name</label>
-                <input type="text" class="form-control" id="taskName" placeholder="Enter task name" required>
-            </div>
-            <div class="form-group">
-                <label for="taskDescription">Description</label>
-                <textarea class="form-control" id="taskDescription" rows="3" placeholder="Enter task description"
-                    required></textarea>
-            </div>
-            <div class="form-group">
-                <label for="assignedTo">Assigned To</label>
-                <input type="text" class="form-control" id="assignedTo" placeholder="Enter assignee name" required>
-            </div>
-            <div class="form-group">
-                <label for="dueDate">Due Date</label>
-                <input type="date" class="form-control" id="dueDate" required>
-            </div>
-            <div class="form-group">
-                <label for="status">Status</label>
-                <select class="form-control" id="status" required>
-                    <option value="To Do">To Do</option>
-                    <option value="In Progress">In Progress</option>
-                    <option value="Completed">Completed</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="taskImage">Upload Image</label>
-                <input type="file" class="form-control" id="taskImage" accept="image/*">
-            </div>
-            <button type="submit" class="btn btn-custom-submit">Submit</button>
-        </form>
+    <div>
+        <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="./link-logo-draft.jpg" width="50" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+            Idaily
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search tasks" aria-label="Search"
+                    id="searchInput">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="button"
+                    onclick="searchTasks()">Search</button>
+            </form>
+        </div>
+    </nav>
+    </div>
+    <h1 class="mb-4" style="margin-left: 790px; margin-top: 10px; " >Task Planner</h1>
+    <div class="container mt-5"  >
+        <div class="row">
+            <div class="col-md-4" >
 
-        <h2 class="mt-5">Task List</h2>
-        <div class="status-section">
-            <div class="status-header">To Do</div>
-            <div id="toDoList" class="row"></div>
-        </div>
-        <div class="status-section">
-            <div class="status-header">In Progress</div>
-            <div id="inProgressList" class="row"></div>
-        </div>
-        <div class="status-section">
-            <div class="status-header">Completed</div>
-            <div id="completedList" class="row"></div>
-        </div>
-            <!-- Task items will be inserted here -->
+                <div style="display: flex;">
+                    <h2>Form</h2>
+                    <h2 style="margin-left:350px; ">Tasks</h2>
+                    <h2 style="margin-left: 350px;" >Comment</h2>
+                </div>
+                <form id="taskForm">
+                   
+                    <div class="form-group" style="margin-top: 30px;"  >
+                        <label for="taskName">Name</label>
+                        <input type="text" class="form-control" id="taskName" placeholder="Enter task name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="taskDescription">Description</label>
+                        <textarea class="form-control" id="taskDescription" rows="3"
+                            placeholder="Enter task description" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="assignedTo">Assigned To</label>
+                        <input type="text" class="form-control" id="assignedTo" placeholder="Enter assignee name"
+                            required>
+                    </div>
+                    <div class="form-group">
+                        <label for="dueDate">Due Date</label>
+                        <input type="date" class="form-control" id="dueDate" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="status">Status</label>
+                        <select class="form-control" id="status" required>
+                            <option value="To Do">To Do</option>
+                            <option value="In Progress">In Progress</option>
+                            <option value="Completed">Completed</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="taskImage">Upload Image</label>
+                        <input type="file" class="form-control" id="taskImage" accept="image/*">
+                    </div>
+                    <button type="submit" class="btn btn-custom-submit">Submit</button>
+                </form>
+            </div>
+
+            <div class="col-md-4"style="margin-top: 90px;" >
+                <div id="taskList" class="row">
+                    <!-- Task items will be inserted here -->
+                </div>
+            </div>
+
+            <div class="col-md-4" >
+                <div id="commentsSection" class="row" >
+                    <form id="commentForm" class="w-100">
+                        <div class="form-group">
+                            <label for="commentText" style="margin-top: 85px;">Leave a Comment</label>
+                            <textarea class="form-control" id="commentText" rows="3" placeholder="Enter your comment"
+                                required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-custom-submit">Submit Comment</button>
+                    </form>
+                    <div id="commentList" class="w-100 mt-3"  >
+                        <!-- Comments will be inserted here -->
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -123,7 +168,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
