--- a/login.html
+++ b/login.html
@@ -5,10 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Sign Up</title>
     <link rel="stylesheet" href="loginStyle.css">
+    <style>
+      body {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+          background-color: #f0f0f0;
+          margin: 0;
+      }
+      .container {
+          position: relative;
+          width: 300px;
+          background-color: white;
+          padding: 20px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+          border-radius: 8px;
+      }
+      .login-image {
+          /* position: absolute; */
+          top: 0;
+          left: 0;
+          z-index: 4; /* Place the image above the form */
+          width: 300px; /* Adjust the width as needed */
+          height: auto; /* Maintain aspect ratio */
+          /* Adjust opacity to make the form readable */
+          margin-top: 0px;
+          margin-left: -200px;
+          
+      }
+      .form-container {
+          position: relative;
+          z-index: 2;
+          background-color: white;
+      }
+      .social-login button {
+          width: 100%;
+          margin: 5px 0;
+          padding: 10px;
+          color: white;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+      }
+      .password-toggle-icon {
+          position: absolute;
+          top: 50%;
+          right: 10px;
+          transform: translateY(-50%);
+          cursor: pointer;
+      }
+  </style>
 </head>
 <body>
     <div class="container">
-      <img src="gratis-png-hombre-de-dibujos-animados-Photoroom.png" alt="Image" class="login-image">
+        <img src="gratis-png-hombre-de-dibujos-animados-Photoroom.png" alt="Image" class="login-image">
         <div id="loginForm" class="form-container">
             <h2>Login</h2>
             <form id="login">
@@ -17,28 +68,31 @@
                     <input type="text" id="loginUsername" required>
                 </div>
                 <div class="form-group">
-                  <label for="loginPassword">Password:</label>
-                  <div style="position: relative">
-                    <input type="password" id="loginPassword" name="password" required />
-
-                    <span
-                      class="password-toggle-icon"
-                      onclick="togglePasswordVisibility()"
-                    >
-                      <i class="far fa-eye"></i>
-                    </span>
-                  </div>
+                    <label for="loginPassword">Password</label>
+                    <div style="position: relative">
+                        <input type="password" id="loginPassword" name="password" required>
+                        <span class="password-toggle-icon" onclick="togglePasswordVisibility()">
+                            <i class="far fa-eye"></i>
+                        </span>
+                    </div>
                 </div>
                 <div class="form-group">
-                  <label for="password">Password Strength:</label>
-                  <progress id="password-strength-bar" value="0" max="100"></progress>
+                    <label for="password">Password Strength</label>
+                    <progress id="password-strength-bar" value="0" max="100"></progress>
                 </div>
                 <div class="form-group">
-                  <input type="checkbox" id="remember-me" name="remember-me" />
-                  <label for="remember-me">Remember Me</label>
+                    <input type="checkbox" id="remember-me" name="remember-me">
+                    <label for="remember-me">Remember Me</label>
                 </div>
                 <button type="submit">Login</button>
-                <p>New user? <a href="#" id="showSignUp">Sign up</a></p>
+                <p><a href="forgot_password.php">Forgot your password?</a></p>
+                <p>Don't have an account? <a href="#" id="showSignUp">Sign Up</a></p>
+                <p>Or continue with:</p>
+                <div class="social-login">
+                    <button class="google" onclick="signInWithGoogle()" style="background-color: #db4437">Google</button>
+                    <button class="facebook" onclick="signInWithFacebook()" style="background-color: #3b5998">Facebook</button>
+                    <button class="x" onclick="signInWithX()" style="background-color: #000">X</button>
+                </div>
             </form>
         </div>
 
@@ -53,7 +107,6 @@
                     <label for="signUpPassword">Password</label>
                     <input type="password" id="signUpPassword" required>
                 </div>
-               
                 <button type="submit">Sign Up</button>
                 <p>Already have an account? <a href="#" id="showLogin">Login</a></p>
             </form>
